--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
     <head>
         <meta charset="utf-8">
         <title>portfolio</title>
-    </head>
+    </head> 
     <body>
         <h1>Contact</h1>
         <p>Syracuse University</p>
@@ -27,7 +27,7 @@
                 <label for="foe">Foe</label></p>
             
                  <p><textarea name="message" rows="4" cols="30">
-                    I wish I was taking a nap right now, you probably do too. Submit the pigeon so we can both sleep.</textarea></p>
+                    I wish I was taking a nap right now. You probably do too. Submit the pigeon so we can both sleep.</textarea></p>
                 
                 <button type="submit">Submit</button>
             </feildset>
