--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -18,7 +18,7 @@
         <form action="https://formspree.io/f/mkgwlryq" method="POST">
                 <p><strong>Virtule Carrier Pigeon:</strong></p>
                 <p><label for="fullname">Full Name</label><br>
-                <input type="text" id="fullname"></p> 
+                <input type="text" id="fullname" name="fullname"></p> 
             
                 <p><input type="radio" id="friend" name="relation" value="Friend">
                 <label for="friend">Friend</label><br>
