--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -17,7 +17,7 @@
         </p>
         <form action="https://formspree.io/f/mkgwlryq" method="POST">
                 <p><strong>Virtule Carrier Pigeon:</strong></p>
-                <p><label for="fullname">Full Name</label><br>
+                <p><label for="fullname">Full Name</label>
                 <input type="text" id="fullname" name="fullname"></p> 
             
                 <p><input type="radio" id="friend" name="relation" value="Friend">
