--- a/lab06/contact3.html
+++ b/lab06/contact3.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>portfolio</title>
-        <link rel"stylesheet" href="styles.css">
+        <a href="styles.css">Styles</a>
     </head>  
     <body>
         <h1>Contact</h1> 
