--- a/lab06/skills3.html
+++ b/lab06/skills3.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title> Skills </title>
-        <link rel="stylesheets" href="styles.css">
+        <link rel="stylesheet" type=“text/css” href="styles.css">
         <style>
             table, th, td {border: 1px solid purple}
         </style>
