--- a/lab05/contact2.html
+++ b/lab05/contact2.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>portfolio</title>
+        <link rel="stylesheet" href="styles.css">
     </head>  
     <body>
         <h1>Contact</h1> 
