--- a/lab04/skills.html
+++ b/lab04/skills.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title> Skills </title>
-        <link rel="stylesheets" href="/lab06/styles.css">
+        <link rel="stylesheets" href="/ist263/lab06/styles.css">
         <style>
             table, th, td {border: 1px solid purple}
         </style>
