--- a/lab06/contact6.html
+++ b/lab06/contact6.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>portfolio</title>
-        <link rel="stylesheet" type="text/css" href="/lab06/styles.css">
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>  
     <body>
         <h1>Contact</h1> 
