--- a/lab07/contact7.html
+++ b/lab07/contact7.html
@@ -7,9 +7,9 @@
     </head>  
     <body>
         <nav>  
-            <a href="index.html"></a>
-            <a href="contact7.html"></a>
-            <a href="skills7.html"></a>
+            <a href="index.html">Home</a>
+            <a href="contact7.html">Contact</a>
+            <a href="skills7.html">Skills</a>
         </nav>
         <h1>Contact</h1> 
         <p>Syracuse University</p>
