--- a/lab07/skills7.html
+++ b/lab07/skills7.html
@@ -10,9 +10,9 @@
     </head>
     <body>
         <nav>  
-            <a href="index.html"></a>
-            <a href="contact7.html"></a>
-            <a href="skills7.html"></a>
+            <a href="index.html">Home</a>
+            <a href="contact7.html">Contact</a>
+            <a href="skills7.html">Skills</a>
         </nav>
         <table>
             <caption><strong>Skills</strong></caption>
