--- a/lab08/index.html
+++ b/lab08/index.html
@@ -18,16 +18,16 @@
             <p>I am an Information Management and Technology major with a concentration in project management.</p> 
             <p>I’m not fully sure what I want to do with my major yet, but my goal is to get my master's degree in <strong>library science</strong>.</p>
             <p>I’m this semester’s <strong>philanthropy chair</strong> for KTP and I can write in cursive.</p>
-            <img src="lab5pic.png" class= "catpic" alt="My Picture"></article>
+            <img src="lab5pic.png" class= "catpic" alt="My Picture">
             <div class="likelist">
-            <strong>Things that I like:</strong>
+            <p><strong>Things that I like:</strong></p>
             <ul>
                 <li>Reading</li>
                 <li>Watching movies/TV</li>
                 <li>Hanging out with my friends</li>
                 <li>Playing with my cat</li>
-                 <li> <a href="https://www.pinterest.com/pin/643311128016180390/">Here is a cute cat</a>
-                    </li>
+                <li> <a href="https://www.pinterest.com/pin/643311128016180390/">Here is a cute cat</a>
+                </ul>
             </div>
             <div class="clear"></div>
             <hr>
@@ -37,6 +37,6 @@
             <div class = "tagline">
                 <footer><p>I want coffee, lots of coffee</p></footer>
             </div>
-         <main>
+        </main>
     </body>
 </html> 
