--- a/lab08/contact8.html
+++ b/lab08/contact8.html
@@ -23,14 +23,14 @@
             <p><a href="mailto:ohhacken@syr.edu">Olivia Hackenberry Email</a></p>
             <img src="LI-In-Bug 1.png" alt="LinkedIn logo">
             <a href="www.linkedin.com/in/olivia-h-67880324b">My LinkedIn Profile</a>
-            </article>
+            </article1>
         </div>
         <div class="forminfo">
             <div><article3>
                 <p> 
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5834.281673155681!2d-76.11630462379615!3d43.01742269331851!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f49e6ddb3263%3A0xb74c11a930be99e0!2s570%20Slocum%20Dr%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1726352755638!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </p>
-            </article></div>
+            </article3></div>
             <div><article4>
             <form action="https://formspree.io/f/mkgwlryq" method="POST">
                 <p><strong>Virtule Carrier Pigeon:</strong></p>
@@ -47,7 +47,7 @@
                     
                 <button type="submit">Submit</button>
             </form>
-            </article></div>
+            </article4></div>
         </div>
     </body>
 </html> 
