--- a/lab11/lab11.html
+++ b/lab11/lab11.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab 11</title>
-    <link rel="stylesheet" href="../styles/animate.css">
+    <link rel="stylesheet" href="../lab11/animate2.css">
     <script>
-        function Winnermessage(){
+        function WinnerMessage(){
         alert('You won!');}
 
         function TryAgain(){
@@ -16,8 +16,9 @@
 </head>
 <body>
     <h1>Choose a Walnut</h1>
-    <img src="../images/walnut.png" alt="first walnut" class="first" onclick="WinnerMessage();">
-    <img src="../images/walnut.png" alt="second walnut" class="second" onclick="TryAgain();">
-    <img src="../images/walnut.png" alt="third walnut" class="third" onclick="TryAgain();">
+    <img src="../lab11/walnut.png" alt="first walnut" id="first" onclick="WinnerMessage();">
+        <img src="../lab11/walnut.png" alt="second walnut" id="second" onclick="TryAgain();">
+        <img src="../lab11/walnut.png" alt="third walnut" id="third" onclick="TryAgain();">
+        <div id="messages"></div>
 </body>
 </html>
