--- a/lab11/lab11.html
+++ b/lab11/lab11.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab 11</title>
-    <link rel="stylesheet" href="../lab11/animate2.css">
     <script>
         function WinnerMessage(){
         alert('You won!');}
@@ -16,9 +15,9 @@
 </head>
 <body>
     <h1>Choose a Walnut</h1>
-    <img src="../lab11/walnut.png" alt="first walnut" id="first" onclick="WinnerMessage();">
-        <img src="../lab11/walnut.png" alt="second walnut" id="second" onclick="TryAgain();">
-        <img src="../lab11/walnut.png" alt="third walnut" id="third" onclick="TryAgain();">
+    <img src="../lab11/walnut.png" alt="first walnut" id="first" class="first" onclick="WinnerMessage();">
+        <img src="../lab11/walnut.png" alt="second walnut" id="second" class="second" onclick="TryAgain();">
+        <img src="../lab11/walnut.png" alt="third walnut" id="third" class="third" onclick="TryAgain();">
         <div id="messages"></div>
 </body>
 </html>
