--- a/project6/cute.html
+++ b/project6/cute.html
@@ -16,13 +16,13 @@
             padding: 10px;
         }
         nav a {
-            color: #c9184a;
+            color: #590d22;
             font-weight: bold;
             margin: 0 10px;
             text-decoration: none;
         }
         nav a:hover {
-            color: #FF5D8F;
+            color: #c9184a;
         }
         .container {
             margin: 20px auto;
@@ -69,15 +69,15 @@
         .sources {
             margin-top: 20px;
             font-size: 0.9em;
-            color: #c9184a;
+            color: #590d22;
         }
         .sources a {
             display: block;
-            color: #c9184a;
+            color: #590d22;
             text-decoration: none;
         }
         .sources a:hover {
-            color: #FF5D8F;
+            color: #c9184a;
         }
         /* Responsive styles for smaller screens */
         @media (max-width: 768px) {
