--- a/project6/cute.html
+++ b/project6/cute.html
@@ -38,7 +38,7 @@
             align-items: flex-start;
             justify-content: space-between;
             background: #FADDE1;
-            flex-wrap: wrap; /* Allows wrapping for smaller screens */
+            flex-wrap: wrap; 
         }
         .animal-info {
             flex: 1;
@@ -79,21 +79,21 @@
         .sources a:hover {
             color: #c9184a;
         }
-        /* Responsive styles for smaller screens */
+    
         @media (max-width: 768px) {
             nav a {
                 display: block;
-                margin: 5px 0; /* Stack navigation links vertically */
+                margin: 5px 0; ]
             }
             .animal-card {
-                flex-direction: column; /* Stack content vertically */
+                flex-direction: column; 
             }
             .animal-info {
                 margin-right: 0;
-                margin-bottom: 20px; /* Add space below text content */
+                margin-bottom: 20px; 
             }
             .animal-image img {
-                max-width: 100%; /* Image spans the full width */
+                max-width: 100%;
             }
         }
     </style>
@@ -106,7 +106,6 @@
     </nav>
 
     <div class="container">
-        <!-- Dolphin Section -->
         <div class="animal-card">
             <div class="animal-info">
                 <h2>Dolphins</h2>
@@ -133,8 +132,7 @@
                 <img src="dolphin.png" alt="Dolphin">
             </div>
         </div>
-
-        <!-- Panda Section -->
+        
         <div class="animal-card">
             <div class="animal-info">
                 <h2>Pandas</h2>
