--- a/project6/cute.html
+++ b/project6/cute.html
@@ -130,6 +130,7 @@
             </div>
             <div class="animal-image">
                 <img src="dolphin.png" alt="Dolphin">
+                <a href="https://www.pexels.com/photo/cute-dolphine-underwater-64219/">picture source</a>
             </div>
         </div>
         
@@ -156,6 +157,7 @@
             </div>
             <div class="animal-image">
                 <img src="panda.png" alt="Panda">
+                <a href="https://www.pexels.com/photo/panda-1123765/">picture source</a>
             </div>
         </div>
 
