--- a/lab13/skills.html
+++ b/lab13/skills.html
@@ -16,9 +16,9 @@
             <a href="contact.html">Contact</a>
             <a href="skills.html">Skills</a>
         </nav>
+        <h1>Skills</h1>
         <main id="main">
         <table>
-            <caption><strong>Skills</strong></caption>
             <tr>
               <th>Skill</th> <!-- Row #1-->
               <th>Usefullness</th>  
