--- a/project7/home.html
+++ b/project7/home.html
@@ -8,9 +8,11 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Delius+Swash+Caps&display=swap" rel="stylesheet">
         <style>
-            .h1 {font-family: "Delius Swash Caps", cursive;
+            #header {
+            font-family: "Delius Swash Caps", serif;
             font-weight: 400;
-            font-style: normal;}
+            font-style: normal;
+            }
         </style>
     </head>
     <body>
@@ -19,7 +21,7 @@
             <a href="cute.html">Cute</a>
             <a href="scary.html">Scary</a>
         </nav>
-        <h1>THE Animal Rating Blog</h1>
+        <h1 id="header">THE Animal Rating Blog</h1>
         <h2>Cute</h2>
         <p>Look at these cute aniamls!</p>
         <button onclick="document.location='cute.html'">Click Me :D</button>
