--- a/project7/cute.html
+++ b/project7/cute.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Delius+Swash+Caps&display=swap" rel="stylesheet">
     <title>Cute Animals</title>
     <style>
-        body {
-            font-family: cursive;
+       body {
+            font-family: "Delius Swash Caps", serif;
+            font-weight: 400;
+            font-style: normal;
             margin: 0;
             padding: 0;
             background-color: #FADDE1;
@@ -80,10 +86,10 @@
             color: #c9184a;
         }
     
-        @media (max-width: 768px) {
+        @media (max-width: 600px) {
             nav a {
                 display: block;
-                margin: 5px 0; ]
+                margin: 5px 0;
             }
             .animal-card {
                 flex-direction: column; 
