--- a/project7/home.html
+++ b/project7/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🐾 THE Animal Rating Blog 🐾</title>
+    <title>THE Animal Rating Blog</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -137,7 +137,7 @@
         <a href="scary.html">Scary Animals</a>
     </nav>
 
-    <h1 id="header">THE Animal Rating Blog</h1>
+    <h1 id="header">🐾 THE Animal Rating Blog 🐾</h1>
     <div class="card-container">
         <div class="animal-card">
             <h2>Cute</h2>
