--- a/project7/cute.html
+++ b/project7/cute.html
@@ -102,6 +102,10 @@
                 max-width: 100%;
             }
         }
+
+        #header {display: flex;
+            justify-content: center;
+            color: #590d22}
     </style>
 </head>
 <body>
@@ -111,6 +115,7 @@
         <a href="scary.html">Scary Animals</a>
     </nav>
 
+    <h1 id="header">Cute Animals</h1>
     <div class="container">
         <div class="animal-card">
             <div class="animal-info">
