--- a/project7/scary.html
+++ b/project7/scary.html
@@ -101,6 +101,10 @@
                 max-width: 100%;
             }
         }
+
+        #header {display: flex;
+            justify-content: center;
+            color: #590d22}
     </style>
 </head>
 <body>
@@ -110,8 +114,9 @@
         <a href="scary.html">Scary</a>
     </nav>
 
+    <h1 id="header">Scary Animals</h1>
+
     <div class="container">
-        <!-- Shark Card -->
         <div class="animal-card">
             <div class="animal-info">
                 <h2>Sharks</h2>
@@ -140,7 +145,6 @@
             </div>
         </div>
 
-        <!-- Tarantula Card -->
         <div class="animal-card">
             <div class="animal-info">
                 <h2>Tarantulas</h2>
@@ -168,7 +172,6 @@
             </div>
         </div>
 
-        <!-- Sources -->
         <div class="sources">
             <p>Sources:</p>
             <a href="https://www.adventureaquarium.com/blog/10-jaw-dropping-facts-about-sharks/">Shark Facts 1</a>
